test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_31.k
schema Data:
    a = 1
    a = "1"
